# Minigram2

./: Cargo.toml  README.md
crates/minigram-android/: README.md  settings.gradle.kts
crates/minigram-android/app/: build.gradle.kts  proguard-rules.pro
crates/minigram-android/app/src/main/: AndroidManifest.xml
crates/minigram-android/app/src/main/java/com/minigram/mobile/: MainActivity.kt
crates/minigram-android/app/src/main/java/com/minigram/mobile/data/: SyncModels.kt
crates/minigram-android/app/src/main/java/com/minigram/mobile/rust/: MinigramNative.kt
crates/minigram-android/app/src/main/java/com/minigram/mobile/ui/: MainViewModel.kt
crates/minigram-android/app/src/main/res/values/: strings.xml
crates/minigram-client/: Cargo.toml
crates/minigram-client-core/: Cargo.toml
crates/minigram-client-core/src/: lib.rs
crates/minigram-client/src/: main.rs
crates/minigram-mobile-ffi/: Cargo.toml
crates/minigram-mobile-ffi/src/: lib.rs
crates/minigram-proto/: Cargo.toml  build.rs
crates/minigram-proto/proto/: minigram.proto
crates/minigram-proto/src/: lib.rs
crates/minigram-server/: Cargo.toml  atlas.hcl
crates/minigram-server/migrations/: 202603280001_init.sql
crates/minigram-server/src/: db_service.rs  main.rs
crates/minigram-tauri/: Cargo.toml  tauri.conf.json
crates/minigram-tauri/src/: main.rs
crates/minigram-web/: index.html  package-lock.json  package.json
crates/minigram-web-dioxus/: Cargo.toml
crates/minigram-web-dioxus/src/: api.rs  app.rs  components.rs  main.rs  models.rs  styles.css
crates/minigram-web/src/: App.vue  style.css
crates/minigram-web/src/components/: ChatHeader.vue  ComposerBar.vue  ErrorToast.vue  MessageList.vue  SidebarChats.vue
crates/minigram-web/src/composables/: useMessenger.js  useMinigramApi.js
crates/minigram-web/src/router/: index.js
crates/minigram-web/src/views/: ChatView.vue  ChatsView.vue
