[workspace]
members = [
    "crates/minigram-proto",
    "crates/minigram-server",
    "crates/minigram-client-core",
    "crates/minigram-client",
    "crates/minigram-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = "0.7"
async-nats = "0.38"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
