[package]
name = "minigram-client-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true
rusqlite.workspace = true
tracing.workspace = true
minigram-proto = { path = "../minigram-proto" }
