[package]
name = "minigram-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tracing.workspace = true
rusqlite.workspace = true
minigram-client-core = { path = "../minigram-client-core" }
minigram-proto = { path = "../minigram-proto" }
