[package]
name = "minigram-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
minigram-proto = { path = "../minigram-proto" }
clap.workspace = true
tokio-postgres.workspace = true
serde_json.workspace = true
async-nats.workspace = true
jsonwebtoken.workspace = true
