[package]
name = "minigram-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
minigram-client-core = { path = "../minigram-client-core" }
uuid.workspace = true
